Fixed nav on mobile overlapping pager

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -196,6 +196,7 @@ hr {
 /* ---- Main Container ---- */
 main {
 	margin-left: $navbar-width;
+    padding-bottom: 2rem;
 }
 
 
